prod_snapshot_2015-09-24_1030/objects/Newspaper_History__c.object
<CustomObject>
    <fields>
        <fullName>AZ_Magazine__c</fullName>
        <label>AZ Magazine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AZ_Society__c</fullName>
        <label>AZ Society</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buyer_s_Edge__c</fullName>
        <label>Buyer&apos;s Edge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CareerBuilder_Weekly__c</fullName>
        <label>CareerBuilder Weekly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Classified__c</fullName>
        <label>Classified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_ND__c</fullName>
        <label>Custom ND</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DSM_Moms__c</fullName>
        <label>DSM Moms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fifties_Plus__c</fullName>
        <label>Fifties Plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Homestyle__c</fullName>
        <label>Homestyle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Juice__c</fullName>
        <label>Juice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Newspaper History</relationshipLabel>
        <relationshipName>Newspaper_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Pre_Prints__c</fullName>
        <label>Local Pre-Prints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Daily_Local_Buyer_s_Edge__c</fullName>
        <label>Non-Daily Local Buyer&apos;s Edge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Daily_Local_La_Voz_TV_y_Mas__c</fullName>
        <label>Non-Daily Local La Voz, TV y Mas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Daily_Local_La_Voz__c</fullName>
        <label>Non-Daily Local La Voz</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Daily_Local_Republic_Direct__c</fullName>
        <label>Non-Daily Local Republic Direct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Daily_Local_Valley_Values__c</fullName>
        <label>Non-Daily Local Valley Values</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Daily_Mags_Arizona_Magazine__c</fullName>
        <label>Non-Daily Mags- Arizona Magazine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Daily__c</fullName>
        <label>Non-Daily Mags- Custom Non-Daily</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Online_Local_Banner_Ads__c</fullName>
        <label>Online Local- Banner Ads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Online_Local_Email__c</fullName>
        <label>Online Local- Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Online_Local_Other__c</fullName>
        <label>Online Local- Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Advertising__c</fullName>
        <label>Other Advertising</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Republic_Direct__c</fullName>
        <label>Republic Direct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retail_Preprints__c</fullName>
        <label>Retail Preprints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retail_ROP_Zone__c</fullName>
        <label>Retail ROP- Zone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retail_ROP__c</fullName>
        <label>Retail ROP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stick_Its__c</fullName>
        <label>Stick Its</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valley_Values__c</fullName>
        <label>Valley Values</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weekly_Altoona__c</fullName>
        <label>Weekly- Altoona</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weekly_Indianola__c</fullName>
        <label>Weekly- Indianola</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weekly_Press_Citizen__c</fullName>
        <label>Weekly- Press Citizen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Newspaper History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>AZ_Magazine__c</columns>
        <columns>AZ_Society__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Newspaper History</pluralLabel>
    <recordTypes>
        <fullName>Des_Moines</fullName>
        <active>true</active>
        <label>Des Moines</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>